Adapt WikipediaService to multi-language