@@ -1,18 +1,17 @@
 package es.bvalero.replacer.wikipedia;
 
 import com.github.scribejava.core.model.OAuth1AccessToken;
-import lombok.extern.slf4j.Slf4j;
-import org.jetbrains.annotations.Nullable;
-import org.springframework.context.annotation.Profile;
-import org.springframework.stereotype.Service;
-
+import es.bvalero.replacer.ReplacerException;
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.*;
+import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.Nullable;
+import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Service;
 
 @Slf4j
 @Service
@@ -20,7 +19,7 @@ import java.util.*;
 public class WikipediaServiceOfflineImpl implements WikipediaService {
 
     @Override
-    public String getLoggedUserName(OAuth1AccessToken accessToken) {
+    public String getLoggedUserName(OAuth1AccessToken accessToken, WikipediaLanguage lang) {
         return "offline";
     }
 
@@ -30,81 +29,87 @@ public class WikipediaServiceOfflineImpl implements WikipediaService {
     }
 
     @Override
-    public String getMisspellingListPageContent() throws WikipediaException {
+    public String getMisspellingListPageContent(WikipediaLanguage lang) throws ReplacerException {
         return loadArticleContent("/es/bvalero/replacer/wikipedia/misspelling-list.txt");
     }
 
     @Override
-    public String getFalsePositiveListPageContent() throws WikipediaException {
+    public String getFalsePositiveListPageContent(WikipediaLanguage lang) throws ReplacerException {
         return loadArticleContent("/es/bvalero/replacer/wikipedia/false-positives.txt");
     }
 
     @Override
-    public String getComposedMisspellingListPageContent() throws WikipediaException {
+    public String getComposedMisspellingListPageContent(WikipediaLanguage lang) throws ReplacerException {
         return loadArticleContent("/es/bvalero/replacer/wikipedia/composed-misspellings.txt");
     }
 
     @Override
-    public Optional<WikipediaPage> getPageByTitle(String pageTitle) throws WikipediaException {
+    public Optional<WikipediaPage> getPageByTitle(String pageTitle, WikipediaLanguage lang) throws ReplacerException {
         return Optional.of(buildFakePage(1));
     }
 
-    private WikipediaPage buildFakePage(int pageId) throws WikipediaException {
+    private WikipediaPage buildFakePage(int pageId) throws ReplacerException {
         LocalDateTime nowDate = LocalDateTime.now();
         String now = WikipediaPage.formatWikipediaTimestamp(nowDate);
-        return WikipediaPage.builder()
-                .id(pageId)
-                .namespace(WikipediaNamespace.ARTICLE)
-                .title("América del Norte")
-                .content(loadArticleContent("/es/bvalero/replacer/wikipedia/article-long.txt"))
-                .lastUpdate(nowDate.toLocalDate())
-                .queryTimestamp(now)
-                .build();
+        return WikipediaPage
+            .builder()
+            .id(pageId)
+            .namespace(WikipediaNamespace.ARTICLE)
+            .title("América del Norte")
+            .content(loadArticleContent("/es/bvalero/replacer/wikipedia/article-long.txt"))
+            .lastUpdate(nowDate.toLocalDate())
+            .queryTimestamp(now)
+            .build();
     }
 
     @Override
-    public Optional<WikipediaPage> getPageById(int articleId) throws WikipediaException {
+    public Optional<WikipediaPage> getPageById(int articleId, WikipediaLanguage lang) throws ReplacerException {
         return Optional.of(buildFakePage(articleId));
     }
 
     @Override
-    public List<WikipediaPage> getPagesByIds(List<Integer> pageIds) throws WikipediaException {
+    public List<WikipediaPage> getPagesByIds(List<Integer> pageIds, WikipediaLanguage lang) throws ReplacerException {
         List<WikipediaPage> pages = new ArrayList<>();
         for (Integer id : pageIds) {
-            getPageByTitle(Integer.toString(id)).ifPresent(pages::add);
+            getPageByTitle(Integer.toString(id), lang).ifPresent(pages::add);
         }
         return pages;
     }
 
     @Override
-    public List<WikipediaSection> getPageSections(int pageId) {
+    public List<WikipediaSection> getPageSections(int pageId, WikipediaLanguage lang) {
         return Collections.emptyList();
     }
 
     @Override
-    public Optional<WikipediaPage> getPageByIdAndSection(int pageId, int section) throws WikipediaException {
+    public Optional<WikipediaPage> getPageByIdAndSection(int pageId, int section, WikipediaLanguage lang)
+        throws ReplacerException {
         return Optional.of(buildFakePage(pageId).withSection(section));
     }
 
     @Override
-    public Set<Integer> getPageIdsByStringMatch(String text) {
+    public Set<Integer> getPageIdsByStringMatch(String text, WikipediaLanguage lang) {
         return Collections.singleton(1);
     }
 
     @Override
-    public void savePageContent(int pageId, String pageContent, @Nullable Integer section, String currentTimestamp,
-                                OAuth1AccessToken accessToken) {
+    public void savePageContent(
+        int pageId,
+        String pageContent,
+        @Nullable Integer section,
+        String currentTimestamp,
+        WikipediaLanguage lang,
+        OAuth1AccessToken accessToken
+    ) {
         // Do nothing
     }
 
-    private String loadArticleContent(String fileName) throws WikipediaException {
+    private String loadArticleContent(String fileName) throws ReplacerException {
         LOGGER.info("Load fake content from file: {}", fileName);
         try {
-            return new String(Files.readAllBytes(Paths.get(getClass().getResource(fileName).toURI())),
-                    StandardCharsets.UTF_8);
+            return Files.readString(Paths.get(getClass().getResource(fileName).toURI()));
         } catch (IOException | URISyntaxException e) {
-            throw new WikipediaException(e);
+            throw new ReplacerException(e);
         }
     }
-
 }
